--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "homepage": "https://beratarpa.com",
   "type": "module",
   "scripts": {
-    "start":"react-scripts start",
-    "build": "react-scripts build",
+    "start":"vite start",
+    "build": "vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
